<resources>
    <!-- General strings -->
    <string name="app_name">HappyPuppy</string>
    <string name="logo">Logo</string>
    <string name="logo_text">Logo with text</string>

    <string name="user_friends">Friends</string>
    <string name="user_puppies">Puppies</string>
    <!-- -->
    <!-- Labels for Button -->
    <string name="notification">Notifications</string>
    <string name="explore">Explore</string>
    <string name="profile">Profile</string>
    <string name="my_puppies">My Puppies</string>
    <string name="home">Home</string>
    <string name="yes_account">I have an account</string>
    <string name="no_account">I don\'t have an account</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="save_changes">Save Changes</string>
    <string name="changes_applied">Update completed</string>
    <string name="sign_out">Sign out</string>
    <string name="sign_out_confirm">Are you sure to sign out?</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="edit_puppy">Edit Puppy</string>
    <string name="add_puppy">Add Puppy</string>
    <string name="add_friend">Add Friend</string>
    <string name="remove_friend">Remove Friend</string>
    <string name="accept_request">Accept Request</string>
    <string name="remove_request">Remove Request</string>
    <string name="remove_request_friend">Cancel Friend Request</string>
    <string name="remove_puppy">Remove Puppy</string>
    <string name="remove_puppy_confirm">Are you sure to remove this puppy?</string>
    <string name="view_puppies">View Puppies</string>
    <string name="view_owner">View Owner</string>
    <!-- -->

    <!-- User/Puppy fields -->
    <string name="info">Personal info</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email">Email</string>
    <string name="animal_specie">Specie</string>
    <string name="puppy_race">Race</string>
    <string name="puppy_name">Puppy Name</string>
    <string name="age">Birth date</string>
    <string name="size">Size</string>
    <string name="weight">Weight</string>
    <string name="weight_unit">Weight Unit</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="puppy_behaviour">Personalities</string>
    <string name="upload_avatar">Upload a photo</string>
    <string name="puppy_owner">Owner</string>
    <string name="otp_sms">OTP SMS Code</string>
    <string name="otp_email">OTP EMail Code</string>
    <string name="optional_field"> (optional)</string>
    <string name="avatar">Avatar</string>

    <string name="month">Months</string>
    <string name="year">Years</string>
    <string name="resultsSearch">Found: </string>
    <!-- -->

    <!-- Strings for privacy settings.. -->
    <string name="information_privacy">By selecting this option you have read and you\'re agreeing to our EULA.</string>
    <string name="security_code">Security Code</string>

    <string name="otp_codes">To complete registration, please insert below the OTP codes sent to your phone number and your email.</string>
    <string name="otp_codes_sent">Please insert below the OTP codes sent to your phone number and your email.</string>
    <string name="resend_otp_codes">Resend codes</string>
    <string name="otp_codes_empty">At least one code is empty</string>
    <string name="otp_codes_invalid">OTP codes are invalid</string>
    <string name="email_sent">A reset password email was sent, please check your inbox.</string>
    <!-- -->

    <!-- General Errors -->
    <string name="wrong_email">Invalid email address.</string>
    <string name="no_notifications">No notifications</string>
    <string name="no_puppies">No puppies</string>
    <string name="no_result">No result</string>
    <!-- -->

    <!-- Errors -->
    <string name="error_unknown">Unknown error</string>
    <string name="unknown">Unknown</string>
    <string name="error_connection_timeout">The server is unreachable</string>
    <string name="error_conversion">Conversion error</string>
    <string name="unauthorized">Unauthorized</string>
    <string name="internal_server_error">Internal server error</string>
    <string name="user_already_exist">The user already exists</string>
    <string name="user_already_verified">User already verified</string>
    <string name="user_not_found">User not found</string>
    <string name="user_mail_not_found">User not found with this email</string>
    <string name="wrong_login">Invalid username or password</string>
    <string name="fill_data">Insert data in non optional fields</string>
    <string name="insert_data_login">Required data for login</string>
    <!-- -->

    <!-- Strings "insert" -->
    <string name="insert_name">Name field is empty.</string>
    <string name="insert_specie">Specie field is empty.</string>
    <string name="insert_email">E-mail field is empty.</string>
    <string name="insert_username">Username field is empty.</string>
    <string name="select_gender">Select a gender.</string>
    <string name="insert_phone">Phone number field is empty or invalid.</string>
    <string name="accept_eula">Accept the EULA to sign up.</string>
    <string name="insert_password">Password field is empty, \n must to be 8 characters minimum. </string>
    <string name="insert_password_length">Password field  must to be \n 8 characters minimum. </string>
    <string name="pw_not_equals">Passwords are not equal.</string>
    <string name="conflicts_on">Conflict on properties: </string>
    <string name="unprocessable_entity_on">Unable to process entity due to properties: </string>
    <!-- -->

    <!-- Strings for dialogs -->
    <string name="dismiss">Dismiss</string>
    <string name="clear_all">Clear all</string>
    <string name="confirm">Confirm</string>
    <string name="send">Send</string>
    <string name="search">Search</string>
    <!-- -->

    <!-- Array Strings -->
    <string-array name="puppy_size">
        <item>Mini Small</item>
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
    </string-array>

    <string-array name="puppy_unit_weight">
        <item>Kg</item>
        <item>Gr</item>
    </string-array>
    <!-- -->
    <string-array name="animal_kinds">
        <item>Alligator</item>
        <item>Ant</item>
        <item>Badger</item>
        <item>Bat</item>
        <item>Bear</item>
        <item>Beaver</item>
        <item>Bee</item>
        <item>Bird</item>
        <item>Bug</item>
        <item>Bull</item>
        <item>Bumblebee</item>
        <item>Butterfly</item>
        <item>Camel</item>
        <item>Cat</item>
        <item>Caterpillar</item>
        <item>Chicken</item>
        <item>Chinchilla</item>
        <item>Coral</item>
        <item>Cow</item>
        <item>Crab</item>
        <item>Deer</item>
        <item>Dog</item>
        <item>Donkey</item>
        <item>Dragonfly</item>
        <item>Elephant</item>
        <item>Fish</item>
        <item>Flea</item>
        <item>Fly</item>
        <item>Fox</item>
        <item>Frog</item>
        <item>Giraffe</item>
        <item>Gorilla</item>
        <item>Grasshopper</item>
        <item>Hamster</item>
        <item>Hippopotamus</item>
        <item>Hornet</item>
        <item>Horse</item>
        <item>Jaguar</item>
        <item>Jellyfish</item>
        <item>Kangaroo</item>
        <item>Ladybird</item>
        <item>Lamb</item>
        <item>Lemur</item>
        <item>Leopard</item>
        <item>Lion</item>
        <item>Llama</item>
        <item>Lobster</item>
        <item>Mite</item>
        <item>Mosquito</item>
        <item>Mouse</item>
        <item>Nautilus</item>
        <item>Octopus</item>
        <item>Panda</item>
        <item>Phasmatodea</item>
        <item>Pig</item>
        <item>Platypus</item>
        <item>Prawn</item>
        <item>Rabbit</item>
        <item>Rhinoceros</item>
        <item>Scarab</item>
        <item>Seahorse</item>
        <item>Seal</item>
        <item>Sheep</item>
        <item>Sloth</item>
        <item>Slug</item>
        <item>Snail</item>
        <item>Snake</item>
        <item>Spider</item>
        <item>Squirrel</item>
        <item>Starfish</item>
        <item>Suricate</item>
        <item>Sworm</item>
        <item>Tapir</item>
        <item>Trilobite</item>
        <item>Turtle</item>
        <item>Walrus</item>
        <item>Wasp</item>
        <item>Wildebeest</item>
        <item>Wolf</item>
        <item>Zebra</item>
    </string-array>
    <string-array name="animal_breeds">
        <item>Budgie</item>
        <item>Crane</item>
        <item>Dove</item>
        <item>Duck</item>
        <item>Falcon</item>
        <item>Flamingo</item>
        <item>Hummingbird</item>
        <item>Kiwi</item>
        <item>Ostrich</item>
        <item>Owl</item>
        <item>Parrot</item>
        <item>Peacock</item>
        <item>Pelican</item>
        <item>Puffin</item>
        <item>Quail</item>
        <item>Seagull</item>
        <item>Stork</item>
        <item>Swan</item>
        <item>Woodpecker</item>
        <item>Machaon</item>
        <item>Monarch</item>
        <item>Parantica Sita</item>
        <item>Tiger</item>
        <item>Beagle</item>
        <item>Corgi</item>
        <item>German Shepherd</item>
        <item>Papillon</item>
        <item>Poodle</item>
        <item>Pug</item>
        <item>Shiba Inu</item>
        <item>Yorkshire Terrier</item>
        <item>Bream</item>
        <item>Clown</item>
        <item>Dolphin</item>
        <item>Koi</item>
        <item>Orca</item>
        <item>Perch</item>
        <item>Pike</item>
        <item>Roach</item>
        <item>Stingray</item>
        <item>Whale</item>
        <item>Red</item>
        <item>Rattlesnake</item>
    </string-array>
    <string-array name="list_personalities">
        <item>Big eater</item>
        <item>Fun-loving</item>
        <item>Sad</item>
        <item>Friendly</item>
        <item>Hippy</item>
        <item>Sedentary</item>
        <item>Hyperactive</item>
        <item>Sleepyhead</item>
        <item>Child friendly</item>
        <item>Bungler</item>
    </string-array>
</resources>
