<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:iconTint="@color/colorSecondary"
        android:title="@string/home"
        android:background="@drawable/button_border"/>
    <item
        android:id="@+id/nav_notification"
        android:icon="@drawable/ic_notifications_active"
        android:iconTint="@color/colorSecondary"
        android:title="@string/notification"
        android:background="@drawable/button_border"/>
    <item
        android:id="@+id/nav_explore"
        android:icon="@drawable/ic_explore"
        android:iconTint="@color/colorSecondary"
        android:title="@string/explore"
        android:background="@drawable/button_border"/>
    <item
        android:id="@+id/nav_account"
        android:background="@drawable/button_border"
        android:icon="@drawable/ic_account_box"
        android:iconTint="@color/colorSecondary"
        android:title="@string/profile"
        android:visible="true" />
</menu>