<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:padding="@dimen/padding">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            style="@style/Logo.Text"
            android:contentDescription="@string/logo_text" />

        <EditText
            android:id="@+id/sign_in_input_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:drawableEnd="@drawable/ic_account_box"
            android:drawableTint="@color/colorAccent"
            android:hint="@string/username"
            android:importantForAutofill="no"
            android:inputType="textNoSuggestions" />

        <EditText
            android:id="@+id/sign_in_input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:drawableEnd="@drawable/ic_lock"
            android:drawableTint="@color/colorAccent"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/sign_in_button_sign_in"
            style="@style/Button.Colored.Inverted"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:drawableEnd="@drawable/ic_arrow_forward"
            android:drawableTint="@color/colorTertiary"
            android:text="@string/sign_in" />

        <Button
            android:id="@+id/sign_in_button_sign_up"
            style="@style/Button.Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_account" />

        <Button
            android:id="@+id/sign_in_button_forgot_password"
            style="@style/Button.Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textAllCaps="false"/>

    </LinearLayout>
</ScrollView>