<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/colorPrimary"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/padding">

    <ImageView
        android:id="@+id/image_logo"
        android:layout_width="@dimen/logo_width"
        android:layout_height="@dimen/logo_height"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/logo"
        android:src="@drawable/ic_logo" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image_logo"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/text_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image_logo"
        android:layout_marginTop="50dp"
        android:drawableEnd="@drawable/ic_account_box_black_24dp"
        android:hint="@string/username"
        android:importantForAutofill="no"
        android:inputType="textNoSuggestions" />

    <EditText
        android:id="@+id/text_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_username"
        android:layout_marginTop="26dp"
        android:drawableEnd="@drawable/ic_lock_black_24dp"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/button_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_password"
        android:layout_marginTop="24dp"
        android:drawableEnd="@drawable/ic_arrow_forward_black_24dp"
        android:drawableTint="@color/colorTertiary"
        android:text="@string/sign_in"
        android:theme="@style/Button.Colored.Inverted" />

    <TextView
        android:id="@+id/button_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_sign_in"
        android:layout_marginTop="24dp"
        android:text="@string/no_account"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/colorAccent"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/button_forgot_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_register"
        android:layout_marginTop="10dp"
        android:text="@string/forgot_password"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textStyle="bold" />

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_forgot_password"
        android:layout_centerHorizontal="true"
        android:visibility="gone" />

</RelativeLayout>