<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:padding="@dimen/padding">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            style="@style/Logo.Text"
            android:contentDescription="@string/logo_text" />

        <EditText
            android:id="@+id/sign_up_input_full_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:drawableEnd="@drawable/ic_account_box"
            android:drawableTint="@color/colorAccent"
            android:hint="@string/full_name"
            android:importantForAutofill="no"
            android:inputType="textNoSuggestions" />

        <EditText
            android:id="@+id/sign_up_input_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:drawableEnd="@drawable/ic_adb"
            android:drawableTint="@color/colorAccent"
            android:hint="@string/username"
            android:importantForAutofill="no"
            android:inputType="textNoSuggestions" />

        <EditText
            android:id="@+id/sign_up_input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:drawableEnd="@drawable/ic_email"
            android:drawableTint="@color/colorAccent"
            android:hint="@string/email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/sign_up_input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:drawableEnd="@drawable/ic_lock"
            android:drawableTint="@color/colorAccent"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/sign_up_input_password_repeat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:drawableEnd="@drawable/ic_lock"
            android:drawableTint="@color/colorAccent"
            android:hint="@string/repeat_password"
            android:importantForAutofill="no"
            android:inputType="textPassword" />


        <Button
            android:id="@+id/sign_up_button_sign_up"
            style="@style/Button.Colored.Inverted"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:drawableEnd="@drawable/ic_arrow_forward"
            android:drawableTint="@color/colorTertiary"
            android:text="@string/sign_up" />

        <Button
            android:id="@+id/sign_up_button_sign_in"
            style="@style/Button.Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:text="@string/yes_account"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/colorAccent"
            android:textStyle="bold" />

    </LinearLayout>
</ScrollView>