<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Bottom Navigation Bar -->
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/top_navigation"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="top"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <ImageView
            android:id="@+id/home_page_icon_logo"
            android:layout_width="49dp"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:contentDescription="@string/logo"
            app:srcCompat="@drawable/ic_logo" />

        <Button
            android:id="@+id/home_page_button_reload"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="209dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/colorPrimary"
            android:clickable="true"
            android:text="@string/app_name"
            android:textSize="18sp"
            android:textStyle="bold" />

    </com.google.android.material.navigation.NavigationView>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/top_navigation"
        android:background="@color/colorPrimary">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:clickable="true"
            android:orientation="vertical"
            android:padding="10dip">
            <!--<ImageView
            style="@style/Avatar.Text"
            android:contentDescription="@string/logo"
            android:layout_gravity="center"
            android:background="@drawable/img_circle"/> -->
            <LinearLayout
                android:id="@+id/register_puppy_section_img"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/register_puppy_profile_image"
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_dog_avatar"
                    app:civ_border_color="@color/colorPrimary"
                    app:civ_border_width="2dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:text="@string/upload_avatar" />
            </LinearLayout>

            <EditText
                android:id="@+id/register_puppy_input_name_puppy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin"
                android:drawableEnd="@drawable/ic_foot_print"
                android:hint="@string/puppy_name"
                android:importantForAutofill="no"
                android:inputType="textNoSuggestions" />

            <EditText
                android:id="@+id/register_puppy_input_age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin"
                android:drawableEnd="@drawable/ic_time"
                android:drawableTint="@color/colorAccent"
                android:hint="@string/age"
                android:importantForAutofill="no"
                android:inputType="textNoSuggestions" />

            <EditText
                android:id="@+id/register_puppy_input_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin"
                android:drawableEnd="@drawable/ic_gender"
                android:drawableTint="@color/colorAccent"
                android:hint="@string/gender"
                android:importantForAutofill="no"
                android:inputType="textNoSuggestions" />

            <EditText
                android:id="@+id/sign_up_input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin"
                android:drawableEnd="@drawable/ic_email"
                android:drawableTint="@color/colorAccent"
                android:hint="@string/email"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/sign_up_input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin"
                android:drawableEnd="@drawable/ic_lock"
                android:drawableTint="@color/colorAccent"
                android:hint="@string/password"
                android:importantForAutofill="no"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/sign_up_input_password_repeat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin"
                android:drawableEnd="@drawable/ic_lock"
                android:drawableTint="@color/colorAccent"
                android:hint="@string/repeat_password"
                android:importantForAutofill="no"
                android:inputType="textPassword" />
        </LinearLayout>

    </ScrollView>

    <!-- Bottom Navigation Bar -->
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/home_page_bottom_nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="0dp"
        android:background="@color/colorPrimary"
        app:labelVisibilityMode="unlabeled"
        app:itemIconTint="@color/colorSecondary"
        app:menu="@menu/bottom_navigation"
        />
</RelativeLayout>