<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1" >
    <ScrollView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/colorPrimary"
        android:padding="@dimen/padding">

        <LinearLayout
            android:id="@+id/activate_profile_root_view"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_vertical"
            android:padding="10dip">

            <ImageView
                style="@style/Logo"
                android:contentDescription="@string/logo"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/otp_codes"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="@dimen/margin"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/otp_sms" />

            <EditText
                android:id="@+id/activate_profile_input_otp_sms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableTint="@color/colorAccent"
                android:drawableEnd="@drawable/ic_sms"
                android:maxLength="5"
                android:hint="00000" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/otp_email" />

            <EditText
                android:id="@+id/activate_profile_input_otp_mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_envelope"
                android:drawableTint="@color/colorAccent"
                android:maxLength="5"
                android:hint="00000" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal">
            <Button
                android:id="@+id/activate_profile_button_resend_codes"
                style="@style/Button.Colored.Tertiary"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin"
                android:text="@string/resend_otp_codes" />
            <Button
                android:id="@+id/activate_profile_button_send"
                style="@style/Button.Colored.Inverted"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin"
                android:text="@string/send" />
        </LinearLayout>

            <TextView
                android:id="@+id/activate_profile_error_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin"
                android:textColor="@color/design_default_color_error"
                android:visibility="invisible"
                android:text="" />
        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:id="@+id/activate_profile_view_loader"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="0.5"
        android:background="@color/colorAccentOpacity"
        android:gravity="center"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/activate_profile_loader"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_gravity="center"
            android:progressTint="@color/colorPrimary"
            android:layout_marginBottom="@dimen/logo_height"
            android:rotation="180" />
    </LinearLayout>
</RelativeLayout>