<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/colorPrimary"
    android:padding="@dimen/padding">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:padding="10dip">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/insert_email" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:padding="10dip">

            <EditText
                android:id="@+id/forgot_password_input_data"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:drawableTint="@color/colorAccent"
                android:hint="@string/email" />

            <ImageButton
                android:id="@+id/forgot_password_send_data"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:background="@color/colorPrimary"
                android:src="@drawable/ic_send_filled" />
        </LinearLayout>

        <TextView
            android:id="@+id/forgot_password_email_sent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:textColor="@color/design_default_color_error"
            android:visibility="invisible"
            android:text="" />

        <ImageView
            style="@style/Logo"
            android:contentDescription="@string/logo"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"/>
    </LinearLayout>
</ScrollView>